tests/OK/llvm/conversion1.c
int main(void) {
	int a = 1.0;
	a = 2.0;
	return a;
}
