tests/FAIL/semantics/varnotdeclaredyet.c
int main(void){
	sabao_yeaaaaaaaaaaah = 1;

	uhuuuuuuuuuuuuu = "Carlos Daniel";

	mais1 = 0;

	return 0;
}
